logs/invoke_build.log
Package search: {'_pypi_ordering': False, 'version': '0.1', 'name': 'invoke', 'summary': 'Invoke Python callables as command-line tasks.'}
Fetching package metadata: ....
Removing old build directory
Removing old work directory
BUILD START: invoke-0.10.1-py27_0
Fetching package metadata: ......
Solving package specifications: .+ pip install invoke
You are using pip version 7.0.1, however version 7.0.3 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
Collecting invoke
  Downloading http://localhost/packages/py2.py3/i/invoke/invoke-0.10.1-py2.py3-none-any.whl (166kB)
Installing collected packages: invoke
Successfully installed invoke-0.10.1
Compiling /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/invoke/vendor/yaml3/__init__.py ...
  File "/home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages/invoke/vendor/yaml3/__init__.py", line 284
    class YAMLObject(metaclass=YAMLObjectMetaclass):
                              ^
SyntaxError: invalid syntax


The following NEW packages will be INSTALLED:

    openssl:    1.0.1k-1    
    pip:        7.0.1-py27_0
    python:     2.7.10-0    
    readline:   6.2-2       
    setuptools: 17.0-py27_0 
    sqlite:     3.8.4.1-1   
    system:     5.8-2       
    tk:         8.5.18-0    
    zlib:       1.2.8-0     

Linking packages ...
[                    ]|                                                  |   0%[openssl             ]|                                                  |   0%[readline            ]|#####                                             |  11%[sqlite              ]|###########                                       |  22%[system              ]|################                                  |  33%[tk                  ]|######################                            |  44%[zlib                ]|###########################                       |  55%[python              ]|#################################                 |  66%[setuptools          ]|######################################            |  77%[pip                 ]|############################################      |  88%[      COMPLETE      ]|##################################################| 100%
Removing old work directory
Copying /home/ubuntu/pypi-conda-builds/invoke to /home/ubuntu/miniconda/conda-bld/work
Package: invoke-0.10.1-py27_0
source tree in: /home/ubuntu/miniconda/conda-bld/work
compiling .pyc files...
Command failed: /home/ubuntu/miniconda/envs/_build/bin/python -Wi /home/ubuntu/miniconda/envs/_build/lib/python2.7/compileall.py -q -x port_v3 /home/ubuntu/miniconda/envs/_build/lib/python2.7/site-packages
Creating standard recipe for invoke-0.10.1
Converting recipe in /home/ubuntu/pypi-conda-builds/invoke
package = invoke
   dependencies = []
Building conda package for invoke
